# PowerTooth

./: .gitignore  AGENTS.md  AI_AGENT_NOTICE.md  PLAN.md  README.md  publish.sh
.github/workflows/: release.yml
docs/: HARDWARE.md  INSTALL.md  VALIDATION.md
firmware/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.defaults  sdkconfig.defaults.bluedroid
firmware/components/ble-scanner/: CMakeLists.txt  ble_scanner.c  powertooth_ble_scanner_bluedroid.c  powertooth_ble_scanner_nimble.c
firmware/components/ble-scanner/include/: powertooth_ble.h  powertooth_ble_scanner.h
firmware/components/controller-registry/: CMakeLists.txt  powertooth_registry.c  registry.c
firmware/components/controller-registry/include/: powertooth_registry.h
firmware/components/host-link/: CMakeLists.txt  host_link.c  powertooth_host_link.c  readme.md
firmware/components/host-link/include/: powertooth_host_link.h
firmware/components/power-control/: CMakeLists.txt  power_control.c  powertooth_power_control.c
firmware/components/power-control/include/: powertooth_power_control.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
host/: Cargo.toml  bluez.rs  bridge.rs  build-defaults.conf  build.rs  cargo.toml  device_link.rs  main.rs  package-linux.sh  protocol.rs  readme.md
host/device-link/: readme.md
packaging/: 99-powertooth.rules  install.sh  powertooth.logrotate  powertooth.service  uninstall.sh
