[package]
name = "powertooth-host"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-logging = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-serial = "5"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }

[[bin]]
name = "powertooth-host"
path = "main.rs"
