[package]
name = "powertooth"
version = "0.0.0-default"
edition = "2024"

[features]
default = []
debug-logging = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-serial = "5"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
libc = "0.2"

[[bin]]
name = "powertooth"
path = "main.rs"
